Address Copilot review comments on provider-axis PR
- AgentCapabilities: use Set.copyOf() instead of Collections.unmodifiableSet()
  for true defensive copying (prevents mutation via the caller's original ref)
- OpencodeRunner.capabilities(): change reportsCost=false to true — the runner
  reports cost for cloud providers (openrouter, anthropic); local runs produce
  costUsd=0 which is still meaningful (free). Derive supportedProviders from
  PROVIDER_MAP.keySet() so the set stays in sync automatically.
- OpencodeRunner.run(): delete the synthesized config file (which may contain
  API keys) in a finally block after the subprocess exits, plus delete the temp
  directory when one was created. Restrict file permissions to rw------- on
  POSIX systems before writing the key material.
- OpencodeConfigBuilder: fix Javadoc for resolveProviderUrl(String) — removed
  claim of a "provider-specific environment variable" override that doesn't exist.
- PhaseConfigResolver: reword Javadoc for validateProviderForRunner — clarify
  that opencode is not validated here, not that it "accepts any provider in its
  known set without client-side validation."
- server.py: reword two error messages so they describe fields as optional
  rather than implying all four (runner/model/effort/provider) are required.
- Update OpencodeRunnerTest.capabilitiesAdvertiseOpencodeFeatures to assert
  reportsCost=true and verify supportedProviders matches PROVIDER_MAP keys.